// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure renders correctly 1`] = `
<div>
  <div
    data-testid="config-layout"
  >
    <div
      class="css-1km0bek"
    >
      <div
        data-testid="input-container"
      >
        <div
          data-testid="editable-html"
          languagecharactersprops="[object Object],[object Object]"
          markup=""
          mathmloptions="[object Object]"
          maximageheight="300"
          maximagewidth="300"
          pluginprops="[object Object]"
          toolbaropts="[object Object]"
        />
      </div>
      <div
        class="css-uewl2b"
      >
        <div
          class="css-1567tvh"
          style="justify-content: flex-start;"
        >
          <div
            class="css-qqpprr"
          >
            Define Response
          </div>
          <svg
            aria-hidden="true"
            aria-label="Validation requirements:
All correct answers (the primary and any alternates) should not be empty and should be unique."
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1tb0x0h-MuiSvgIcon-root"
            data-mui-internal-clone-element="true"
            data-testid="InfoIcon"
            focusable="false"
            style="margin-left: 5px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
            />
          </svg>
        </div>
        <div
          data-testid="input-container"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiSelect-root css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-18jp67o-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
              role="combobox"
              tabindex="0"
            >
              Grade 8 - HS
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="8"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1nf2c5d-MuiNotchedOutlined-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="css-1km0bek"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-kkzu41-MuiFormLabel-root-MuiInputLabel-root"
          >
            RESPONSE TEMPLATE
          </label>
          <div
            classnames="[object Object]"
            data-testid="math-toolbar"
            keypadmode="8"
            latex="\\embed{answerBlock}[r1] = \\embed{answerBlock}[r2] \\text{eggs}"
          />
        </div>
      </div>
      <div
        class="css-1567tvh"
        style="justify-content: flex-start;"
      >
        <div
          class="css-qqpprr"
        >
          Define Correct Response
        </div>
      </div>
      <div
        data-testid="input-container"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiSelect-root css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-18jp67o-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
            role="combobox"
            tabindex="0"
          >
            Grade 3 - 5
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            tabindex="-1"
            value="3"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-1nf2c5d-MuiNotchedOutlined-root"
            >
              <span
                aria-hidden="true"
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        callowtrailingzeros="[object Object]"
        cignoreorder="[object Object]"
        data-testid="response"
        index="0"
        mode="3"
        response="[object Object]"
      />
    </div>
    <div
      data-testid="feedback-config"
    />
  </div>
</div>
`;

exports[`GeneralConfigBlock renders correctly with snapshot 1`] = `
<div>
  <div
    class="css-1km0bek"
  >
    <div
      data-testid="input-container"
    >
      <div
        data-testid="editable-html"
        imagesupport="[object Object]"
        languagecharactersprops="[object Object],[object Object]"
        markup=""
        mathmloptions="[object Object]"
        maximageheight="300"
        maximagewidth="300"
        pluginprops="[object Object]"
        uploadsoundsupport="[object Object]"
      />
    </div>
    <div
      class="css-uewl2b"
    >
      <div
        class="css-1567tvh"
        style="justify-content: flex-start;"
      >
        <div
          class="css-qqpprr"
        >
          Define Response
        </div>
        <svg
          aria-hidden="true"
          aria-label="Validation requirements:
All correct answers (the primary and any alternates) should not be empty and should be unique."
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1tb0x0h-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoIcon"
          focusable="false"
          style="margin-left: 5px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
          />
        </svg>
      </div>
      <div
        data-testid="input-container"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiSelect-root css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-18jp67o-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
            role="combobox"
            tabindex="0"
          >
            Grade 8 - HS
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            tabindex="-1"
            value="8"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-1nf2c5d-MuiNotchedOutlined-root"
            >
              <span
                aria-hidden="true"
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        class="css-1km0bek"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-kkzu41-MuiFormLabel-root-MuiInputLabel-root"
        >
          RESPONSE TEMPLATE
        </label>
        <div
          classnames="[object Object]"
          data-testid="math-toolbar"
          keypadmode="8"
          latex="\\embed{answerBlock}[r1] = \\embed{answerBlock}[r2] \\text{eggs}"
        />
      </div>
    </div>
    <div
      class="css-1567tvh"
      style="justify-content: flex-start;"
    >
      <div
        class="css-qqpprr"
      >
        Define Correct Response
      </div>
    </div>
    <div
      data-testid="input-container"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiSelect-root css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-18jp67o-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
          role="combobox"
          tabindex="0"
        >
          Grade 3 - 5
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
          tabindex="-1"
          value="3"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1nf2c5d-MuiNotchedOutlined-root"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      callowtrailingzeros="[object Object]"
      cignoreorder="[object Object]"
      data-testid="response"
      index="0"
      mode="3"
      response="[object Object]"
    />
  </div>
</div>
`;
